# tf-aws

./: .gitignore  .terraform-docs.yml  README.md  eks.auto.tfvars  install_infra.tf  outputs.tf  providers.tf  states.tf  terraform.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
modules/eks/: README.md  data.tf  locals.tf  modules.tf  outputs.tf  providers.tf  r-alb.tf  r-eks.tf  r-eks_workers.tf  r-external-dns.tf  r-global.tf  r-net.tf  v-dns.tf  v-eks.tf  v-global.tf  v-net.tf
modules/helm/: .terraform-docs.yml  README.md  data.tf  locals.tf  mlhub_values.yaml  outputs.tf  providers.tf  pypi_values.yaml  r-charts.tf  r-eks.tf  r-mlhub_requirements.tf  r-pypi_requirements.tf  resources.tf  variables.tf
modules/vpc/: README.md  locals.tf  outputs.tf  resources.tf  variables.tf
python/: README.md  pyproject.toml
python/helloworld/: README.txt  setup.py
